--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h2>testando</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Criando um site responsivo do começo ao fim</title>
+</head>
+<body>
+	<h1>Olá Macacada</h1>
+    
+    <style>
+    	h1{
+    		color: red;
+    	}
+
+    </style>
+
+</body>
+</html>
