pagina sobre finalizada

--- a/sobre.html
+++ b/sobre.html
@@ -72,29 +72,29 @@
 				<ul class="habilidades">
 						<li class="habilidade-8">
 							<h2>
-								<i class="fa fa-html5"> HTML // 80%</i>
+								<i class="fa fa-html5"></i> <strong>HTML</strong> // 80%
 								<div class="barra"><span></span></div>
 							</h2>
 						</li>
 						<li class="habilidade-5">
 							<h2>
-								<i class="fa fa-css3"> HTML // 50%</i>
+								<i class="fa fa-css3"></i> <strong>CSS</strong> // 50%
 								<div class="barra"><span></span></div>
 							</h2>
 						</li>
 						<li class="habilidade-7">
 							<h2>
-								<i class="fa fa-wordpress"> WordPress // 70%</i>
+								<i class="fa fa-wordpress"></i> <strong>WordPress</strong> // 70%
 								<div class="barra"><span></span></div>
 							</h2>
 						</li>
 						<li class="habilidade-3">
 							<h2>
-								<i class="fa fa-git"> Git // 30%</i>
+								<i class="fa fa-git"></i> <strong>Git</strong> // 30%
 								<div class="barra"><span></span></div>
 							</h2>
 						</li>
-					</ul>	
+				</ul>	
 
 				<a href="#" class="botao medio"><i class="fa fa-picture-o"> Acessar Portifólio</i></a>
 
